# 3712_Rust_Research_Project

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  initialisation_script.sh  rem_extract_metrics.csv
rem/: Cargo.toml  rust-toolchain.toml  todo.txt
rem/rem-cli/: Cargo.toml  README.md
rem/rem-cli/eval/: readme.md
rem/rem-cli/src/: error.rs  main.rs  rem_args.rs  utils.rs
rem/rem-cli/src/tests/: extract.rs  mod.rs
rem/rem-extract/: 0_test_info.csv  4_convert_to_project.py  Cargo.toml
rem/rem-extract/correct_output/: argument_and_locals.rs  argument_form_expr.rs  argument_used_twice_form_expr.rs  break_from_nested_and_outer_loops.rs  break_from_nested_loop.rs  break_loop.rs  break_loop_nested.rs  break_loop_nested_labeled.rs  break_loop_with_if.rs  break_stmt.rs  break_with_value.rs  break_with_value_and_label.rs  break_with_value_and_return.rs  closure_arguments.rs  comments_in_block_expr.rs  continue_loop_nested_labeled.rs  copy_custom_used_after.rs  copy_used_after.rs  does_not_add_extra_whitespace.rs  does_not_import_control_flow.rs  dont_emit_type_with_hidden_lifetime_parameter.rs  empty_generic_param_list.rs  extract_cast.rs  extract_does_not_tear_body_apart.rs  extract_does_not_tear_comments_apart.rs  extract_does_not_wrap_res_in_res.rs  extract_from_nested.rs  extract_function_copies_comment_at_end.rs  extract_function_copies_comment_at_start.rs  extract_function_copies_comment_in_between.rs  extract_function_copies_comment_indented.rs  extract_function_does_preserve_whitespace.rs  extract_function_from_trait_with_existing_non_empty_impl_block.rs  extract_function_long_form_comment.rs  extract_method_from_trait_impl.rs  extract_method_from_trait_with_existing_non_empty_impl_block.rs  extract_method_from_trait_with_multiple_existing_impl_blocks.rs  extract_method_from_trait_with_multiple_existing_trait_impl_blocks.rs  extract_mut_ref_param_has_no_mut_binding_in_loop.rs  extract_partial_block.rs  (+73 more)
rem/rem-extract/examples/example1/: Cargo.toml
rem/rem-extract/examples/example2/: Cargo.toml
rem/rem-extract/rem-extract/: Cargo.toml
rem/rem-extract/rem-extract/src/: test_details.rs
rem/rem-extract/scripts/: clone_tests.sh  example1.sh  run_fresh.sh  test_safe.sh
rem/rem-extract/scripts/linux/: build.sh  build_tests.sh  run_fresh.sh
rem/rem-extract/src/: args.rs  daemon.rs  error.rs  extract_tests.rs  extraction.rs  lib.rs  main.rs  test_details.rs
rem/rem-extract/src/daemon/: daemon_init.rs  mod.rs  utils.rs  watcher.rs
rem/rem-extract/src/extract/: extract_tests.rs  extraction.rs  extraction_utils.rs  mod.rs
rem/rem-extract/src/server/: change.rs  create.rs  delete.rs  extract.rs  init.rs  mod.rs  stdio.rs
rem/rem-extract/src/startup/: context.rs  identify.rs  mod.rs  types.rs
rem/rem-extract/test_crates/with_std/: Cargo.toml
rem/rem-extract/testdata/argument_and_locals/: meta.toml
rem/rem-extract/testdata/argument_form_expr/: meta.toml
rem/rem-extract/testdata/argument_used_twice_form_expr/: meta.toml
rem/rem-extract/testdata/break_from_nested_and_outer_loops/: meta.toml
rem/rem-extract/testdata/break_from_nested_loop/: meta.toml
rem/rem-extract/testdata/break_loop/: meta.toml
rem/rem-extract/testdata/break_loop_nested/: meta.toml
rem/rem-extract/testdata/break_loop_nested_labeled/: meta.toml
rem/rem-extract/testdata/break_loop_with_if/: meta.toml
rem/rem-extract/testdata/break_with_value/: meta.toml
rem/rem-extract/testdata/break_with_value_and_label/: meta.toml
rem/rem-extract/testdata/break_with_value_and_return/: meta.toml
rem/rem-extract/testdata/closure_arguments/: meta.toml
rem/rem-extract/testdata/comments_in_block_expr/: meta.toml
rem/rem-extract/testdata/continue_loop_nested_labeled/: meta.toml
rem/rem-extract/testdata/copy_used_after/: meta.toml
rem/rem-extract/testdata/does_not_add_extra_whitespace/: meta.toml
rem/rem-extract/testdata/does_not_import_control_flow/: meta.toml
rem/rem-extract/testdata/dont_emit_type_with_hidden_lifetime_parameter/: meta.toml
rem/rem-extract/testdata/empty_generic_param_list/: meta.toml
rem/rem-extract/testdata/extract_cast/: meta.toml
rem/rem-extract/testdata/extract_does_not_tear_body_apart/: meta.toml
rem/rem-extract/testdata/extract_does_not_tear_comments_apart/: meta.toml
rem/rem-extract/testdata/extract_does_not_wrap_res_in_res/: meta.toml
rem/rem-extract/testdata/extract_function_copies_comment_at_end/: meta.toml
rem/rem-extract/testdata/extract_function_copies_comment_at_start/: meta.toml
rem/rem-extract/testdata/extract_function_copies_comment_in_between/: meta.toml
rem/rem-extract/testdata/extract_function_copies_comment_indented/: meta.toml
rem/rem-extract/testdata/extract_function_does_preserve_whitespace/: meta.toml
rem/rem-extract/testdata/extract_function_long_form_comment/: meta.toml
rem/rem-extract/testdata/function_expr/: meta.toml
rem/rem-interface/: Cargo.toml  README.md
rem/rem-interface/src/: lib.rs  metrics.rs  vscode.rs
rem/rem-repairer/: Cargo.toml
rem/rem-repairer/output/: in_out_lifetimes_rustfix_repairer.rs  in_out_lifetimes_simple_repairer.rs
rem/rem-repairer/src/: common.rs  exports.rs  lib.rs  main.rs  repair_lifetime_loosest_bound_first.rs  repair_lifetime_tightest_bound_first.rs
rem/rem-server/: Cargo.toml  README.md
rem/rem-server/src/: init.rs  main.rs  stdio.rs  utils.rs
rem/rem-utils/: Cargo.toml
rem/rem-utils/src/: lib.rs  typ.rs
rem/rem-verification/: Cargo.toml
rem/rem-verification/cases/: convert_to_coq.sh  raw_code.rs
rem/rem-verification/llbc/: _CoQProject
rem/rem-verification/src/: args.rs  lib.rs  main.rs  verify.rs
rem/rem-vscode/: .gitignore  README.md  esbuild.js  package-lock.json  package.json
rem/rem-vscode/.devcontainer/: devcontainer.json
rem/rem-vscode/scripts/: cfg.py  config.toml
rem/rem-vscode/src/: client.ts  extract.ts  interface.ts  main.ts  preview.ts  repairer.ts  utils.ts  verification.ts
rem_tests/test_1/: Cargo.toml
rem_tests/test_1/src/: main.rs
showcases/solar_racing-rs/: Cargo.toml
showcases/solar_racing-rs/src/: main.rs  style.css
(+1019 files in other folders)
