[[bin]]
name = "rem-cli"
path = "src/main.rs"

[package]
name = "rem-cli"
version = "0.1.0"
edition = "2021"
authors = [ "Matthew Britton <matt.britton@anu.edu.au>",]
license = "MIT"
description = "CLI interface for the REM toolchain. Built to be implemented into the VSCode extension for REM"
repository = "https://github.com/RuleBrittonica/rem-cli"
categories = [ "command-line-utilities", "development-tools",]
readme = "README.md"
default-run = "rem-cli"

[dependencies]
log = { workspace = true }
flexi_logger = { workspace = true }
colored = { workspace = true }
git2 = { workspace = true }
ra_ap_vfs = { workspace = true }
camino = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true, features = ["derive"] }

# REM toolchain components
rem-extract = { workspace = true }
rem-repairer = { workspace = true }
rem-utils = { workspace = true }
once_cell = "1.21.3"

[build-dependencies]

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []

