[package]
name        = "rem-extract"
version     = "0.1.4"
description = "Providing extract method capability for the REM toolchain"
repository  = "https://github.com/RuleBrittonica/rem-extract"
readme      = "README.md"
default-run = "rem-extract"

# inherit common metadata from the workspace
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# shared, pinned at the workspace
log           = { workspace = true }
flexi_logger  = { workspace = true }
colored       = { workspace = true }
quote         = { workspace = true }
regex         = { workspace = true }
proc-macro2   = { workspace = true }
diff          = { workspace = true }
camino        = { workspace = true }
rowan         = { workspace = true }
clap          = { workspace = true, features = ["derive"] }
lazy_static   = { workspace = true }
cov-mark      = { workspace = true }
syn           = { workspace = true, features = ["full"] }
serde_json    = { workspace = true }
walkdir       = { workspace = true }
notify        = { workspace = true }
ctrlc         = { workspace = true }
anyhow        = { workspace = true }
sha2          = { workspace = true }
serde         = { workspace = true, features = ["derive"] }
triomphe      = { workspace = true }
once_cell     = { workspace = true }
rustc-hash = "2.1.1"

# Rem Crates
rem-utils     = { workspace = true }
rem-interface = { workspace = true }

# Rust Analyzer crates. Note ROWAN must be the same version as used by RA crates
ra_ap_hir              = { workspace = true }
ra_ap_ide              = { workspace = true }
ra_ap_ide_assists      = { workspace = true }
ra_ap_ide_db           = { workspace = true }
"ra_ap_load-cargo"     = { workspace = true }
ra_ap_project_model    = { workspace = true }
"ra_ap_rust-analyzer"  = { workspace = true }
ra_ap_vfs              = { workspace = true }
ra_ap_parser           = { workspace = true }
ra_ap_syntax           = { workspace = true }
ra_ap_cfg              = { workspace = true }
ra_ap_paths            = { workspace = true }
ra_ap_base_db          = { workspace = true }

[build-dependencies]

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []

[lib]
name = "rem_extract"
path = "src/lib.rs"

[[bin]]
name = "rem-extract"
path = "src/main.rs"
