[package]
name = "rem-interface"
version = "0.1.0"

edition.workspace = true
license.workspace = true
authors.workspace = true

repository = "https://github.com/RuleBrittonica/3712_Rust_Research_Project.git"
description = "Interface and Metrics for REM"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
once_cell  = { workspace = true }