[package]
name        = "rem-repairer"
version     = "0.1.4"
description = "Lifetime repairer for Rusty Extraction Maestro"
repository  = "https://github.com/RuleBrittonica/rem-repairer"

# inherit common metadata from the workspace
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# workspace-pinned versions
clap          = { workspace = true, features = ["derive"] }
colored       = { workspace = true }
env_logger    = { workspace = true }
log           = { workspace = true }
regex         = { workspace = true }
rem-utils     = { workspace = true }
rustfix       = { workspace = true }
serde         = { workspace = true, features = ["derive"] }
serde_json    = { workspace = true }
quote         = { workspace = true }
proc-macro2   = { workspace = true, features = ["span-locations"] }
syn           = { workspace = true, features = ["full", "visit-mut", "parsing", "extra-traits"] }
