[package]
name        = "rem-utils"
version     = "0.1.6"
description = "Utilities for Rusty Extraction Maestro"
repository  = "https://github.com/RuleBrittonica/rem-utils.git"
keywords    = ["utilities", "utils", "rem"]

# inherit common metadata from the workspace
edition.workspace      = true
license.workspace      = true
authors.workspace      = true

[dependencies]
log           = { workspace = true }
string_cache  = { workspace = true }
quote         = { workspace = true }
home          = { workspace = true }
regex         = { workspace = true }
colored       = { workspace = true }
diff          = { workspace = true }
config        = { workspace = true }
nom           = { workspace = true }
ena           = { workspace = true }
serde         = { workspace = true, features = ["derive"] }
syn           = { workspace = true, features = ["extra-traits", "full", "visit", "fold", "visit-mut", "printing", "parsing"] }
proc-macro2   = { workspace = true, features = ["span-locations"] }
