[package]
name = "solar_racing-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
glib = "0.20.0"
gdk = "0.18.0"
gdk-pixbuf-sys = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.21", branch = "master"}
gdk-pixbuf = {git = "https://github.com/gtk-rs/gtk-rs-core", version = "0.21", branch = "master"}